Updated CORS policy and added to securityFilterChain